support anchor in head

--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -47,6 +47,24 @@
   font-weight: bold;
   line-height: 1.4;
 }
+.markdown-body h1 .anchor,
+.markdown-body h2 .anchor,
+.markdown-body h3 .anchor,
+.markdown-body h4 .anchor,
+.markdown-body h5 .anchor,
+.markdown-body h6 .anchor {
+  margin-left: -20px;
+  margin-right: 4px;
+  visibility: hidden;
+}
+.markdown-body h1:hover .anchor,
+.markdown-body h2:hover .anchor,
+.markdown-body h3:hover .anchor,
+.markdown-body h4:hover .anchor,
+.markdown-body h5:hover .anchor,
+.markdown-body h6:hover .anchor {
+  visibility: visible;
+}
 .markdown-body p,
 .markdown-body blockquote,
 .markdown-body ul,
