--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -136,6 +136,18 @@
 .markdown-body ul {
   list-style-type: disc;
 }
+.markdown-body dl {
+  margin-bottom: 1.3em
+}
+.markdown-body dl dt {
+  font-weight: 700;
+}
+.markdown-body dl dd {
+  margin-left: 0;
+}
+.markdown-body dl dd p {
+  margin-bottom: 0.8em;
+}
 .markdown-body blockquote {
   margin-left: 0;
   margin-right: 0;
