--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -176,6 +176,18 @@
   padding: 6px 13px;
   border: 1px solid #ddd;
 }
+.markdown-body kbd {
+  display: inline-block;
+  padding: 5px 6px;
+  font: 14px SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+  line-height: 10px;
+  color: #444d56;
+  vertical-align: middle;
+  background-color: #fafbfc;
+  border: 1px solid #d1d5da;
+  border-radius: 3px;
+  box-shadow: inset 0 -1px 0 #d1d5da;
+}
 .markdown-body pre {
   word-wrap: normal;
   padding: 16px;
