--- a/app/_static/page.css
+++ b/app/_static/page.css
@@ -1,13 +1,26 @@
+:root {
+    --foreground-color: #24292e;
+    --background-color: #f6f8fa;
+    --border-color: #d1d5da;
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --foreground-color: #c9d1d9;
+        --background-color: #0d1117;
+        --border-color: #30363d;
+    }
+}
+
 #page-ctn {
   margin: 0 auto;
   max-width: 900px;
-  color: #24292e;
+  color: var(--foreground-color);
 }
 
 #page-header {
   padding: 8px;
-  background-color: #f6f8fa;
-  border-color: #d1d5da;
+  background-color: var(--background-color);
+  border-color: var(--border-color);
   border-style: solid;
   border-width: 1px 1px 0;
   border-top-left-radius: 3px;
