--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -8,12 +8,15 @@
     --color-text-tertiary: #777;
     --color-text-link: #4078c0;
     --color-bg-primary: #fff;
+    --color-bg-secondary: #fafbfc;
+    --color-bg-tertiary: #f8f8f8;
     --color-border-primary: #ddd;
     --color-border-secondary: #eaecef;
+    --color-border-tertiary: #d1d5da;
+    --color-kbd-foreground: #444d56;
     --color-markdown-blockquote-border: #dfe2e5;
     --color-markdown-table-border: #dfe2e5;
     --color-markdown-table-tr-border: #c6cbd1;
-    --color-bg-tertiary: #f8f8f8;
     --color-markdown-code-bg: #1b1f230d;
 }
 @media (prefers-color-scheme: dark) {
@@ -22,12 +25,15 @@
         --color-text-tertiary: #8b949e;
         --color-text-link: #58a6ff;
         --color-bg-primary: #0d1117;
+        --color-bg-secondary: #0d1117;
+        --color-bg-tertiary: #161b22;
         --color-border-primary: #30363d;
         --color-border-secondary: #21262d;
+        --color-border-tertiary: #6e7681;
+        --color-kbd-foreground: #b1bac4;
         --color-markdown-blockquote-border: #3b434b;
         --color-markdown-table-border: #3b434b;
         --color-markdown-table-tr-border: #272c32;
-        --color-bg-tertiary: #161b22;
         --color-markdown-code-bg: #f0f6fc26;
     }
 }
@@ -211,12 +217,12 @@
   padding: 5px 6px;
   font: 14px SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
   line-height: 10px;
-  color: #444d56;
+  color: var(--color-kbd-foreground);
   vertical-align: middle;
-  background-color: #fafbfc;
-  border: 1px solid #d1d5da;
+  background-color: var(--color-bg-secondary);
+  border: 1px solid var(--color-border-tertiary);
   border-radius: 3px;
-  box-shadow: inset 0 -1px 0 #d1d5da;
+  box-shadow: inset 0 -1px 0 var(--color-border-tertiary);
 }
 .markdown-body pre {
   word-wrap: normal;
