--- a/app/_static/page.css
+++ b/app/_static/page.css
@@ -1,14 +1,20 @@
 :root {
-    --foreground-color: #24292e;
-    --background-color: #f6f8fa;
-    --border-color: #d1d5da;
+  --foreground-color: #24292e;
+  --background-color: #f6f8fa;
+  --border-color: #d1d5da;
+  --body-color: #ffffff;
 }
 @media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-color: #c9d1d9;
-        --background-color: #0d1117;
-        --border-color: #30363d;
-    }
+  :root {
+    --foreground-color: #c9d1d9;
+    --background-color: #0d1117;
+    --border-color: #30363d;
+    --body-color: #000000;
+  }
+}
+
+body {
+  background: var(--body-color);
 }
 
 #page-ctn {
@@ -43,4 +49,3 @@
   font-size: 14px;
   font-weight: 600;
 }
-
