Set the font-family on header text to match markdown default

--- a/app/_static/page.css
+++ b/app/_static/page.css
@@ -55,6 +55,7 @@ main {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   line-height: 24px;
+  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #page-header svg {
