feat: centered viz.js diagrams

--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -318,3 +318,8 @@
 .mermaid > svg {
   max-width: none !important;
 }
+.dot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
